--- a/website/style.css
+++ b/website/style.css
@@ -31,3 +31,37 @@ nav{
     justify-content: space-between;
     gap: 2rem;
 }
+
+.nav-logo{
+    max-width: 100px; 
+}
+
+.nav-links{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+}
+
+.link a{
+    position: relative;
+    padding-bottom: 0.75rem;
+    color: #fff;
+}
+
+.link a::after{
+    content:"";
+    position: absolute;
+    height: 2px;
+    width: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #1d4ed8;
+    transition: all 0.3s ease;
+}
+
+.kink a:hover::after{
+    width: 70%;
+    
+
+}
