--- a/website/style.css
+++ b/website/style.css
@@ -106,7 +106,7 @@ header .content h4{
     font-weight: 600;
 }
 
-header .content h1{
+header .content{
     color: #fff;
     margin-bottom: 1rem;
     font-size: 3rem;
@@ -114,7 +114,7 @@ header .content h1{
     line-height: 4rem;
 }
 
-header .content h1 span{
+header .content span{
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px #fff; 
 }
