--- a/website/style.css
+++ b/website/style.css
@@ -156,10 +156,9 @@ section .header{
 }
 
 .features{
-    margin-top: 4rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
 }
 
 .features .card{
