--- a/website/style.css
+++ b/website/style.css
@@ -158,7 +158,7 @@ section .header{
 .features{
     margin-top: 4rem;
     display: grid;
-    grid-template-columns: (4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
 }
 
